<resources>
    <string name="app_name">Multi-Cal</string>
    <string name="enter_a_text_view">Input a</string>
    <string name="enter_b_text_view">Input b</string>
    <string name="enter_c_text_view">Input c</string>
    <string name="menu_action_toQuadratic">Quadratic Function</string>
    <string name="menu_action_toBinary">Binary Function</string>
    <string name="menu_action_toHexadecimal">Hexadecimal Function</string>
    <string name="menu_action_toMain">Main Function</string>
    <string name="num_3">3</string>
    <string name="num_2">2</string>
    <string name="num_1">1</string>
    <string name="op_minus">–</string>
    <string name="num_6">6</string>
    <string name="num_5">5</string>
    <string name="num_4">4</string>
    <string name="op_multiply">×</string>
    <string name="num_9">9</string>
    <string name="num_8">8</string>
    <string name="num_7">7</string>
    <string name="op_divide">÷</string>
    <string name="op_remain">%</string>
    <string name="op_NegPos">–/+</string>
    <string name="op_sqrt">√</string>
    <string name="op_clr">CLR</string>
    <string name="op_delete">DEL</string>
    <string name="op_enter">enter</string>
    <string name="sign_addition">+</string>
    <string name="sign_dot">.</string>
    <string name="num_0">0</string>
    <string name="sign_equal">=</string>
    <string name="start_number">0</string>
    <string name="text_enter">enter</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_about">About</string>
    <string name="text_my_website">williamwu2049.com</string>

</resources>
