<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/action_main_activity"
            android:title="@string/menu_action_toMain"
            android:textColor="@color/text_view_text" />
        <item
            android:id="@+id/action_second_activity"
            android:title="@string/menu_action_toQuadratic"
            android:textColor="@color/text_view_text"/>
        <item
            android:id="@+id/action_third_activity"
            android:title="@string/menu_action_toBinary"
            android:textColor="@color/text_view_text"/>
        <item
            android:id="@+id/action_fourth_activity"
            android:title="@string/menu_action_toHexadecimal"
            android:textColor="@color/text_view_text"/>
    </group>

</menu>
