<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_fourth"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/darker_gray"
    tools:context="com.williamwu2049.calculator.FourthActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_fourth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@color/text_view"
        android:minHeight="?attr/actionBarSize"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ThemeOverlay.AppCompat.Dark" />

    <LinearLayout
        android:id="@+id/screen4"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/toolbar_fourth"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="sans-serif-light"
            android:layout_weight="1"
            android:background="@color/text_view"
            android:gravity="bottom|end"
            android:maxLines="1"
            android:paddingEnd="5dp"
            android:scrollHorizontally="true"
            android:textColor="@android:color/white"
            android:textSize="55sp"
            tools:ignore="RtlSymmetry" />

        <LinearLayout
            android:id="@+id/InputPad"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/Row1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/first_row_numeric"
                    android:layout_weight="1">

                    <Button
                        android:id="@+id/btn7"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        style="@style/AppTheme.Button"
                        android:background="@drawable/first_row_numeric"
                        android:onClick="onClickNumber"
                        android:text="@string/num_7"
                        android:textColor="@android:color/white"
                        android:textSize="28sp" />
                </FrameLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/first_row_numeric"
                    android:layout_weight="1">

                    <Button
                        android:id="@+id/btn8"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        style="@style/AppTheme.Button"
                        android:background="@drawable/first_row_numeric"
                        android:onClick="onClickNumber"
                        android:text="@string/num_8"
                        android:textColor="@android:color/white"
                        android:textSize="28sp" />
                </FrameLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/first_row_numeric"
                    android:layout_weight="1">

                    <Button
                        android:id="@+id/btn9"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        style="@style/AppTheme.Button"
                        android:background="@drawable/first_row_numeric"
                        android:onClick="onClickNumber"
                        android:text="@string/num_9"
                        android:textColor="@android:color/white"
                        android:textSize="28sp" />
                </FrameLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/Row2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/second_row_numeric"
                    android:layout_weight="1">

                    <Button
                        android:id="@+id/btn4"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        style="@style/AppTheme.Button"
                        android:background="@drawable/second_row_numeric"
                        android:onClick="onClickNumber"
                        android:text="@string/num_4"
                        android:textColor="@android:color/white"
                        android:textSize="28sp" />
                </FrameLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/second_row_numeric"
                    android:layout_weight="1">

                    <Button
                        android:id="@+id/btn5"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        style="@style/AppTheme.Button"
                        android:background="@drawable/second_row_numeric"
                        android:onClick="onClickNumber"
                        android:text="@string/num_5"
                        android:textColor="@android:color/white"
                        android:textSize="28sp" />
                </FrameLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/second_row_numeric"
                    android:layout_weight="1">

                    <Button
                        android:id="@+id/btn6"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        style="@style/AppTheme.Button"
                        android:background="@drawable/second_row_numeric"
                        android:onClick="onClickNumber"
                        android:text="@string/num_6"
                        android:textColor="@android:color/white"
                        android:textSize="28sp" />
                </FrameLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/Row3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/third_row_numeric"
                    android:layout_weight="1">

                    <Button
                        android:id="@+id/btn1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        style="@style/AppTheme.Button"
                        android:background="@drawable/third_row_numeric"
                        android:onClick="onClickNumber"
                        android:text="@string/num_1"
                        android:textColor="@android:color/white"
                        android:textSize="28sp" />
                </FrameLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/third_row_numeric"
                    android:layout_weight="1">

                    <Button
                        android:id="@+id/btn2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        style="@style/AppTheme.Button"
                        android:background="@drawable/third_row_numeric"
                        android:onClick="onClickNumber"
                        android:text="@string/num_2"
                        android:textColor="@android:color/white"
                        android:textSize="28sp" />
                </FrameLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/third_row_numeric"
                    android:layout_weight="1">

                    <Button
                        android:id="@+id/btn3"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        style="@style/AppTheme.Button"
                        android:background="@drawable/third_row_numeric"
                        android:onClick="onClickNumber"
                        android:text="@string/num_3"
                        android:textColor="@android:color/white"
                        android:textSize="28sp" />
                </FrameLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/Row4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/clear_button">

                    <Button
                        android:id="@+id/btnEnter"
                        style="@style/AppTheme.Button"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/clear_button_ripple_effect"
                        android:text="@string/op_enter"
                        android:onClick="onClickEnter"
                        android:textColor="@android:color/white"
                        android:textSize="19sp" />

                </FrameLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/clear_button"
                    android:layout_weight="1">

                    <Button
                        android:id="@+id/btn0"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        style="@style/AppTheme.Button"
                        android:background="@drawable/clear_button_ripple_effect"
                        android:onClick="onClickNumber"
                        android:text="@string/num_0"
                        android:textColor="@android:color/white"
                        android:textSize="28sp" />
                </FrameLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/clear_button">

                    <Button
                        android:id="@+id/btnDelete"
                        style="@style/AppTheme.Button"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:onClick="onClickDelete"
                        android:background="@drawable/clear_button_ripple_effect"
                        android:text="@string/op_delete"
                        android:textColor="@android:color/white"
                        android:textSize="19sp" />

                </FrameLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>


</RelativeLayout>
