<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:autofit="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_second"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/darker_gray"
    tools:context="com.williamwu2049.calculator.SecondActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_second"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@color/text_view"
        android:minHeight="?attr/actionBarSize"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ThemeOverlay.AppCompat.Dark" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/screen2"
        android:layout_below="@+id/toolbar_second"
        android:layout_alignParentStart="true">

        <com.williamwu2049.calculator.AutofitTextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@color/text_view_text"
            android:text=""
            android:textSize="50sp"
            android:fontFamily="sans-serif-light"
            android:paddingTop="24dp"
            android:paddingBottom="7dp"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingEnd="10dp"
            android:gravity="bottom|end"
            android:maxLines="2"
            autofit:minTextSize="28sp"
            android:background="@color/text_view"
            android:elevation="4dp"
            />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/InputPad"
        android:layout_weight="1">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:id="@+id/InputRowA">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:fontFamily="sans-serif-light"
            android:text="@string/enter_a_text_view"
            android:textColor="@android:color/white"
            android:textSize="23sp"
            android:background="@color/material.yellow.700"
            android:id="@+id/textInputA"
            android:gravity="center"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="sans-serif-light"
            android:id="@+id/user_input_a"
            android:background="@color/material.yellow.700"
            android:textColor="@android:color/white"
            android:gravity="center" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/InputRowB"
        android:layout_marginTop="1dp"
        android:layout_weight="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:fontFamily="sans-serif-light"
            android:text="@string/enter_b_text_view"
            android:textColor="@android:color/white"
            android:textSize="23sp"
            android:background="@color/material.amber.800"
            android:id="@+id/textInputB"
            android:gravity="center"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="sans-serif-light"
            android:id="@+id/user_input_b"
            android:background="@color/material.amber.800"
            android:textColor="@android:color/background_light"
            android:gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/InputRowC"
        android:layout_marginTop="1dp"
        android:layout_weight="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:fontFamily="sans-serif-light"
            android:text="@string/enter_c_text_view"
            android:textColor="@android:color/white"
            android:textSize="23sp"
            android:background="@color/material.orange.900"
            android:id="@+id/textInputC"
            android:gravity="center"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="sans-serif-light"
            android:id="@+id/user_input_c"
            android:background="@color/material.orange.900"
            android:textColor="@android:color/white"
            android:gravity="center"/>
    </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.01"
            android:id="@+id/textButtons">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/operation_button"
                android:layout_weight="1">
                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="sans-serif-light"
                        android:id="@+id/btnEnter"
                        android:textColor="@android:color/white"
                        android:background="@drawable/operation_button_ripple_effect"
                        android:text="@string/text_enter"
                        android:textSize="18sp"
                        android:onClick="onClickEnter" />
            </FrameLayout>


        </LinearLayout>

    </LinearLayout>

    </LinearLayout>
</RelativeLayout>
